welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:2: error: type mismatch;
 found   : Int(40)
 required: Boolean
  if (30<=a<=40) {
             ^in3050:3: error: type mismatch;
 found   : Int(40)
 required: Boolean
    if (30<=b<=40) {return true} else {return false}}
               ^in3050:6: error: type mismatch;
 found   : Int(50)
 required: Boolean
    if (40<=a<=50) {
               ^in3050:7: error: type mismatch;
 found   : Int(50)
 required: Boolean
      if (40<=b<=50) {return true} else {return false}}
                 ^in3050:6: error: type mismatch;
 found   : Unit
 required: Boolean
    if (40<=a<=50) {
    ^